--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -15,31 +15,43 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <androidx.core.widget.ContentLoadingProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:indeterminateTint="@color/water_blue_100"
+            android:indeterminateTintMode="src_atop"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <co.ceryle.radiorealbutton.RadioRealButtonGroup
             android:id="@+id/metric_radio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_16sdp"
             app:layout_constraintBottom_toTopOf="@id/age_edit_text_layout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/progress_bar"
             app:rrbg_backgroundColor="@color/reply_blue_50"
-            app:rrbg_dividerSize="1dp"
-            app:rrbg_radius="6dp"
-            app:rrbg_selectorSize="6dp">
+            app:rrbg_dividerSize="@dimen/_1sdp"
+            app:rrbg_radius="@dimen/_6sdp"
+            app:rrbg_selectorSize="@dimen/_6sdp">
 
             <co.ceryle.radiorealbutton.RadioRealButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:rrb_checked="true"
                 app:rrb_drawable="@drawable/ic_male_black"
-                app:rrb_drawableHeight="36dp"
+                app:rrb_drawableHeight="@dimen/_36sdp"
                 app:rrb_drawableTint="@color/reply_blue_50"
-                app:rrb_drawableWidth="1dp"
+                app:rrb_drawableWidth="@dimen/_1sdp"
                 app:rrb_ripple="true"
                 app:rrb_rippleColor="@color/water_blue_100"
                 app:rrb_selectorColor="@color/reply_black_800"
@@ -60,8 +72,8 @@
             android:id="@+id/age_edit_text_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
             app:boxBackgroundColor="@color/reply_blue_50"
             app:layout_constraintBottom_toTopOf="@id/weight_edit_text_layout"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -85,8 +97,8 @@
             android:id="@+id/weight_edit_text_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
             app:boxBackgroundColor="@color/reply_blue_50"
             app:layout_constraintBottom_toTopOf="@id/gender_radio"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -110,27 +122,27 @@
             android:id="@+id/gender_radio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_16sdp"
+            android:layout_marginEnd="@dimen/_16sdp"
             app:layout_constraintBottom_toTopOf="@id/guideline"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/weight_edit_text_layout"
             app:rrbg_backgroundColor="@color/reply_blue_50"
-            app:rrbg_dividerSize="1dp"
-            app:rrbg_radius="6dp"
-            app:rrbg_selectorSize="6dp">
+            app:rrbg_dividerSize="@dimen/_1sdp"
+            app:rrbg_radius="@dimen/_6sdp"
+            app:rrbg_selectorSize="@dimen/_6sdp">
 
             <co.ceryle.radiorealbutton.RadioRealButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:rrb_checked="true"
                 app:rrb_drawable="@drawable/ic_male_black"
-                app:rrb_drawableHeight="36dp"
-                app:rrb_drawablePadding="8dp"
+                app:rrb_drawableHeight="@dimen/_30sdp"
+                app:rrb_drawablePadding="@dimen/_8sdp"
                 app:rrb_drawableTint="@color/water_blue_100"
-                app:rrb_drawableWidth="36dp"
+                app:rrb_drawableWidth="@dimen/_36sdp"
                 app:rrb_ripple="true"
                 app:rrb_rippleColor="@color/water_blue_100"
                 app:rrb_selectorColor="@color/reply_black_800"
@@ -142,10 +154,10 @@
                 android:layout_height="wrap_content"
                 app:rrb_drawable="@drawable/ic_female_black"
                 app:rrb_drawableGravity="right"
-                app:rrb_drawableHeight="36dp"
-                app:rrb_drawablePadding="8dp"
+                app:rrb_drawableHeight="@dimen/_36sdp"
+                app:rrb_drawablePadding="@dimen/_8sdp"
                 app:rrb_drawableTint="@color/water_blue_100"
-                app:rrb_drawableWidth="36dp"
+                app:rrb_drawableWidth="@dimen/_30sdp"
                 app:rrb_ripple="true"
                 app:rrb_rippleColor="@color/water_blue_100"
                 app:rrb_text="@string/female"
@@ -164,10 +176,10 @@
             android:id="@+id/info_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_16sdp"
             android:text="@string/info_text"
             android:textAlignment="center"
             android:textColor="@color/reply_black_900"
-            android:layout_margin="@dimen/activity_horizontal_margin"
             app:layout_constraintBottom_toTopOf="@id/water_seek_bar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -177,8 +189,8 @@
             android:id="@+id/water_seek_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginRight="@dimen/_16sdp"
             app:bsb_auto_adjust_section_mark="true"
             app:bsb_bubble_color="@color/water_blue_100"
             app:bsb_bubble_text_color="@color/reply_blue_50"
@@ -193,7 +205,7 @@
             app:bsb_show_section_mark="false"
             app:bsb_touch_to_seek="true"
             app:bsb_track_color="@color/reply_blue_800"
-            app:bsb_track_size="4dp"
+            app:bsb_track_size="@dimen/_4sdp"
             app:layout_constraintBottom_toBottomOf="@id/water_amount_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -203,11 +215,11 @@
             android:id="@+id/water_amount_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
+            android:layout_marginBottom="@dimen/_16sdp"
             android:text="@{dashboardViewModel.text}"
             android:textAlignment="center"
             android:textColor="@color/reply_black_900"
-            android:textSize="20sp"
+            android:textSize="@dimen/_20ssp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
