--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -21,7 +21,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:layout_margin="@dimen/_16sdp"
             android:hint="@string/selected_month"
             app:boxBackgroundColor="@color/reply_blue_50"
             app:layout_constraintLeft_toLeftOf="parent"
