--- a/app/src/main/res/layout/single_drink_container.xml
+++ b/app/src/main/res/layout/single_drink_container.xml
@@ -4,20 +4,20 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="wrap_content"
-    android:layout_margin="@dimen/medium_level_margin_8dp"
+    android:layout_margin="@dimen/_8sdp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    card_view:cardCornerRadius="@dimen/small_level_margin_4dp"
-    card_view:cardElevation="@dimen/medium_level_margin_8dp">
+    card_view:cardCornerRadius="@dimen/_4sdp"
+    card_view:cardElevation="@dimen/_8sdp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginLeft="@dimen/medium_level_margin_8dp"
-        android:layout_marginRight="@dimen/medium_level_margin_8dp"
-        android:layout_marginTop="@dimen/small_level_margin_4dp"
-        android:layout_marginBottom="@dimen/small_level_margin_4dp"
+        android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginRight="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:layout_marginBottom="@dimen/_4sdp"
         android:orientation="vertical">
 
         <androidx.appcompat.widget.AppCompatImageButton
