Firebase analytic screen monitoring and bug on back button is fixed (1.8.1)

--- a/app/src/main/res/layout/history_fragment.xml
+++ b/app/src/main/res/layout/history_fragment.xml
@@ -13,6 +13,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -61,9 +62,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/drinkRecycleView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
 
         </ScrollView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
