--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,12 +6,10 @@
         android:icon="@drawable/ic_drop_black"
         android:title="@string/title_home" />
 
-<!--    TODO historyi tamamladıktan sonra uncomment et-->
-<!--    <item
+    <item
         android:id="@+id/navigation_history"
         android:icon="@drawable/ic_history_black_24dp"
-        android:title="@string/history"
-        />-->
+        android:title="@string/history" />
 
     <item
         android:id="@+id/navigation_notifications"
