--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,7 +41,8 @@
         <action
             android:id="@+id/action_drinksFragment_to_navigation_home"
             app:destination="@id/navigation_home"
-            app:popUpTo="@+id/navigation_home" />
+            app:popUpTo="@id/navigation_home"
+            app:popUpToInclusive="false" />
     </fragment>
 
     <fragment
